--- a/index.html
+++ b/index.html
@@ -2,47 +2,134 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Shriram Institute Of Engineering & Technology Polytechnic, Paniv</title>
+    <title>Shriram Institute Of Engineering & Technology (Poly), Paniv</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>Shriram Institute Of Engineering & Technology Polytechnic, paniv</h1>
-        <p>Knowledge • Excellence • Success</p>
-    </header>
+<header>
+    <h1>Shriram Institute Of Engineering & Technology (Poly)</h1>
+    <p>Paniv | Knowledge • Excellence • Success</p>
+</header>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">College</a></li>
-            <li><a href="#">Courses</a></li>
-            <li class="login"><a href="#">Login</a></li>
-        </ul>
-    </nav>
+<nav class="navbar">
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#courses">Courses</a></li>
+        <li><a href="#departments">Departments</a></li>
+        <li><a href="#students">Students</a></li>
+        <li class="login"><a href="#login">Login</a></li>
+    </ul>
+</nav>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>Welcome to  Shriram Institute Of Engineering & Technology Polytechnic,Paniv</h2>
-        <p>Your future starts here</p>
-    </section>
+<section id="home" class="content">
+    <h2>Home</h2>
+    <p>
+        Welcome to Shriram Institute Of Engineering & Technology (Poly), Paniv.
+        We provide quality diploma education with practical knowledge and discipline.
+    </p>
+</section>
 
-    <!-- Content -->
-    <section class="content">
-        <h2>About Us</h2>
+<section id="about" class="content">
+    <h2>About Us</h2>
+    <p>
+        Our institute is committed to technical excellence, innovation,
+        and skill development for engineering students.
+    </p>
+</section>
+
+<section id="courses" class="content">
+    <h2>Courses Offered</h2>
+    <ul>
+        <li>Diploma in Computer Engineering</li>
+        <li>Diploma in Civil Engineering</li>
+        <li>Diploma in Mechanical Engineering</li>
+        <li>Diploma in Electrical Engineering</li>
+        <li>Diploma in E&TC Engineering</li>
+    </ul>
+</section>
+
+<!-- Departments -->
+<section id="departments" class="content">
+    <h2>Engineering Departments</h2>
+
+    <div class="dept">
+        <h3>💻 Computer Engineering</h3>
         <p>
-            Shriram Institute Of Engineering & Technology Polytechnic, Paniv provides quality education with experienced faculty
-            and modern facilities.
+            Focuses on programming, software development, networking,
+            database management, and web technologies.
         </p>
-    </section>
+    </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 Shriram Institute Of Engineering & Technology Polytechnic, Paniv | All Rights Reserved</p>
-    </footer>
+    <div class="dept">
+        <h3>🏗️ Civil Engineering</h3>
+        <p>
+            Covers construction technology, surveying, structural design,
+            building planning, and infrastructure development.
+        </p>
+    </div>
+
+    <div class="dept">
+        <h3>⚙️ Mechanical Engineering</h3>
+        <p>
+            Deals with machines, manufacturing processes, automobile engineering,
+            thermal systems, and workshop practices.
+        </p>
+    </div>
+
+    <div class="dept">
+        <h3>⚡ Electrical Engineering</h3>
+        <p>
+            Includes electrical machines, power systems, wiring,
+            renewable energy, and industrial applications.
+        </p>
+    </div>
+
+    <div class="dept">
+        <h3>📡 E&TC Engineering</h3>
+        <p>
+            Focuses on electronics, communication systems,
+            microcontrollers, IoT, and PCB design.
+        </p>
+    </div>
+</section>
+
+<!-- Students Gallery -->
+<section id="students" class="content">
+    <h2>Our Students</h2>
+
+    <div class="gallery">
+        <div class="card">
+            <img src="images/student1.jpg" alt="Student">
+            <p>Computer Engineering</p>
+        </div>
+        <div class="card">
+            <img src="images/student2.jpg" alt="Student">
+            <p>Mechanical Engineering</p>
+        </div>
+        <div class="card">
+            <img src="images/student3.jpg" alt="Student">
+            <p>Civil Engineering</p>
+        </div>
+        <div class="card">
+            <img src="images/student4.jpg" alt="Student">
+            <p>E&TC Engineering</p>
+        </div>
+    </div>
+</section>
+
+<section id="login" class="content">
+    <h2>Login</h2>
+    <p>
+        Students and staff can access attendance, results,
+        notices, and academic records through the login portal.
+    </p>
+</section>
+
+<footer>
+    <p>© 2025 Shriram Institute Of Engineering & Technology (Poly), Paniv</p>
+</footer>
 
 </body>
 </html>
